# issproject_theblueumbrella

./: README.md  batch_data.csv  encodings_cache.pkl  foundit_yaayyy.txt  lobby.html  main.py  manager.py  mongo_db.py  my_sql.py  pyproject.toml  scraper.py
static/: dashboard.html  index.html  leaderboard.html
utils/: facial_recognition_module.py
